--- a/config.json
+++ b/config.json
@@ -1,5 +1,7 @@
 {
-  "ODBC": "postgres://postgres:sdbixx@localhost:5432/postgres",
-  "Year": [2008, 2009, 2020],
+  "ODBC": "postgres://postgres:sdbixx@192.168.11.66:5432/postgres",
+  "Year": [
+    2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020
+  ],
   "InsertSQL": "insert into china_area values ($1,$2,$3,$4,$5,$6,$7,$8,to_date($9,'yyyy-MM-dd'))"
 }
