增加纠错代码 移除http连接限制

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "ODBC": "postgres://postgres:sdbixx@192.168.11.66:5432/postgres",
+  "ODBC": "postgres://postgres:sdbixx@localhost:5432/postgres",
   "Year": [
     2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020
   ],
