--- a/config.json
+++ b/config.json
@@ -1,7 +1,5 @@
 {
   "ODBC": "postgres://postgres:sdbixx@localhost:5432/postgres",
-  "Year": [
-    2020, 2021, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019
-  ],
+  "Year": [2020, 2019],
   "InsertSQL": "insert into china_area_info values ($1,$2,$3,$4,$5,$6,$7,$8,to_date($9,'yyyy-MM-dd'))"
 }
