--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
-aiofiles==0.8.0
-aiohttp==3.8.1
-aiosignal==1.2.0
+aiofiles==23.1.0
+aiohttp==3.8.4
+aiosignal==1.3.1
 async-timeout==4.0.2
-asyncpg==0.25.0
-attrs==21.4.0
-autopep8==1.6.0
-beautifulsoup4==4.10.0
-certifi==2021.10.8
-charset-normalizer==2.0.10
-frozenlist==1.3.0
-idna==3.3
-multidict==5.2.0
-pycodestyle==2.8.0
-requests==2.27.1
-soupsieve==2.3.1
+asyncpg==0.27.0
+attrs==23.1.0
+autopep8==2.0.2
+beautifulsoup4==4.12.2
+certifi==2023.5.7
+charset-normalizer==3.1.0
+frozenlist==1.3.3
+idna==3.4
+multidict==6.0.4
+pycodestyle==2.10.0
+requests==2.30.0
+soupsieve==2.4.1
 toml==0.10.2
-urllib3==1.26.8
-yarl==1.7.2
+tomli==2.0.1
+urllib3==2.0.2
+yarl==1.9.2
